# MULTI-evolve

./: pyproject.toml
.streamlit/: config.toml
