[tool.poetry]
package-mode = false
[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta" 
[project]
requires-python = ">=3.10,<3.12"
name = "multi-evolve"
version = "0.1.0"
description = "Streamlit app"
requires-python = ">=3.10"
dependencies = [
  "streamlit",
  "pandas",
  "numpy",
  "biopython",
  "wandb",
  "scikit-learn"
]
