[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "multi-evolve"
version = "0.1.0"
description = "Streamlit app"
requires-python = ">=3.10"
dependencies = [
  "streamlit",
  "pandas",
  "numpy",
  "biopython",
  "wandb",
  "scikit-learn",
    "tqdm",
  "python-Levenshtein",
  "torch",
    "ankh"

]
